--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="txt_search">Arama Yap</string>
+    <string name="menu_flashes">FlashLights</string>
+    <string name="menu_colors">ColorLights</string>
+    <string name="menu_sosAlerts">SosAlerts</string>
 </resources>
