removed unused dependencies and classes app is ready

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
     <string name="menu_flashes">FlashLights</string>
     <string name="menu_colors">ColorLights</string>
     <string name="menu_sosAlerts">SosAlerts</string>
+    <string name="navigation_drawer_open">open</string>
+    <string name="navigation_drawer_close">close</string>
 </resources>
